RAG: Self Query Retriever Notebook Example (#121)
* self query retriever

* updated self-query retriever

* move self-query retrievers examples to folder

--- a/notebooks/langchain/self-query-retriever-examples/chatbot-example.ipynb
+++ b/notebooks/langchain/self-query-retriever-examples/chatbot-example.ipynb
@@ -4,10 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Self-querying retriever with elasticsearch and langchain\n",
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/elastic/elasticsearch-labs/blob/main/notebooks/langchain/langchain-self-query-retriever.ipynb)\n",
+    "# Chatbot Example with Self Query Retriever\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/elastic/elasticsearch-labs/blob/main/notebooks/langchain/self-query-retriever-examples/chatbot-example.ipynb)\n",
     "\n",
-    "This workbook demonstrates example of Elasticsearch's [Self-query retriever](https://api.python.langchain.com/en/latest/retrievers/langchain.retrievers.self_query.base.SelfQueryRetriever.html) to convert unstructured query into a structured query and apply structured query to a vectorstore. \n",
+    "This workbook demonstrates example of Elasticsearch's [Self-query retriever](https://api.python.langchain.com/en/latest/retrievers/langchain.retrievers.self_query.base.SelfQueryRetriever.html) to convert a question into a structured query and apply structured query to Elasticsearch index. \n",
     "\n",
     "Before we begin, we first split the documents into chunks with `langchain` and then using [`ElasticsearchStore.from_documents`](https://api.python.langchain.com/en/latest/vectorstores/langchain.vectorstores.elasticsearch.ElasticsearchStore.html#langchain.vectorstores.elasticsearch.ElasticsearchStore.from_documents), we create a `vectorstore` and index data to elasticsearch.\n",
     "\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -60,30 +60,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
     "docs = [\n",
     "    Document(\n",
     "        page_content=\"A bunch of scientists bring back dinosaurs and mayhem breaks loose\",\n",
-    "        metadata={\"year\": 1993, \"rating\": 7.7, \"genre\": \"science fiction\"},\n",
+    "        metadata={\"year\": 1993, \"rating\": 7.7, \"genre\": \"science fiction\", \"director\": \"Steven Spielberg\", \"title\": \"Jurassic Park\"},\n",
     "    ),\n",
     "    Document(\n",
     "        page_content=\"Leo DiCaprio gets lost in a dream within a dream within a dream within a ...\",\n",
-    "        metadata={\"year\": 2010, \"director\": \"Christopher Nolan\", \"rating\": 8.2},\n",
+    "        metadata={\"year\": 2010, \"director\": \"Christopher Nolan\", \"rating\": 8.2, \"title\": \"Inception\"},\n",
     "    ),\n",
     "    Document(\n",
     "        page_content=\"A psychologist / detective gets lost in a series of dreams within dreams within dreams and Inception reused the idea\",\n",
-    "        metadata={\"year\": 2006, \"director\": \"Satoshi Kon\", \"rating\": 8.6},\n",
+    "        metadata={\"year\": 2006, \"director\": \"Satoshi Kon\", \"rating\": 8.6, \"title\": \"Paprika\"},\n",
     "    ),\n",
     "    Document(\n",
     "        page_content=\"A bunch of normal-sized women are supremely wholesome and some men pine after them\",\n",
-    "        metadata={\"year\": 2019, \"director\": \"Greta Gerwig\", \"rating\": 8.3},\n",
+    "        metadata={\"year\": 2019, \"director\": \"Greta Gerwig\", \"rating\": 8.3, \"title\": \"Little Women\"},\n",
     "    ),\n",
     "    Document(\n",
     "        page_content=\"Toys come alive and have a blast doing so\",\n",
-    "        metadata={\"year\": 1995, \"genre\": \"animated\"},\n",
+    "        metadata={\"year\": 1995, \"genre\": \"animated\", \"director\": \"John Lasseter\", \"rating\": 8.3, \"title\": \"Toy Story\"},\n",
     "    ),\n",
     "    Document(\n",
     "        page_content=\"Three men walk into the Zone, three men walk out of the Zone\",\n",
@@ -93,6 +93,7 @@
     "            \"director\": \"Andrei Tarkovsky\",\n",
     "            \"genre\": \"science fiction\",\n",
     "            \"rating\": 9.9,\n",
+    "            \"title\": \"Stalker\",\n",
     "        },\n",
     "    ),\n",
     "]"
@@ -114,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +161,7 @@
     "metadata_field_info = [\n",
     "    AttributeInfo(\n",
     "        name=\"genre\",\n",
-    "        description=\"The genre of the movie\",\n",
+    "        description=\"The genre of the movie. Can be either 'science fiction' or 'animated'.\",\n",
     "        type=\"string or list[string]\",\n",
     "    ),\n",
     "    AttributeInfo(\n",
@@ -193,157 +194,68 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Test retriever with simple query\n",
+    "# Question Answering with Self-Query Retriever\n",
     "\n",
-    "We will test the retriever with a simple query:  `What are some movies about dream`. \n",
-    "\n",
-    "The output shows all the relevant documents to the query."
+    "We will now demonstrate how to use self-query retriever for RAG."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[Document(page_content='Leo DiCaprio gets lost in a dream within a dream within a dream within a ...', metadata={'year': 2010, 'director': 'Christopher Nolan', 'rating': 8.2}),\n",
-       " Document(page_content='A psychologist / detective gets lost in a series of dreams within dreams within dreams and Inception reused the idea', metadata={'year': 2006, 'director': 'Satoshi Kon', 'rating': 8.6}),\n",
-       " Document(page_content='Toys come alive and have a blast doing so', metadata={'year': 1995, 'genre': 'animated'}),\n",
-       " Document(page_content='A bunch of normal-sized women are supremely wholesome and some men pine after them', metadata={'year': 2019, 'director': 'Greta Gerwig', 'rating': 8.3})]"
+       "AIMessage(content='Inception (2010)')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# This example only specifies a relevant query \n",
-    "retriever.get_relevant_documents(\"What are some movies about dream\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Test retriever with simple query and filter\n",
+    "from langchain.chat_models import ChatOpenAI\n",
+    "from langchain.schema.runnable import RunnableParallel, RunnablePassthrough\n",
+    "from langchain.prompts import ChatPromptTemplate, PromptTemplate\n",
+    "from langchain.schema import format_document\n",
     "\n",
-    "We will now test the retriever with a query:  `Has Andrei Tarkovsky directed any science fiction movies`. \n",
+    "LLM_CONTEXT_PROMPT = ChatPromptTemplate.from_template(\"\"\"\n",
+    "Use the following context movies that matched the user question. Use the movies below only to answer the user's question.\n",
     "\n",
-    "This query has a filter on the metadata `genre` and  `director`. \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Document(page_content='Three men walk into the Zone, three men walk out of the Zone', metadata={'year': 1979, 'rating': 9.9, 'director': 'Andrei Tarkovsky', 'genre': 'science fiction'})]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "retriever.get_relevant_documents(\"Has Andrei Tarkovsky directed any science fiction movies\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Instantiate retriever to filter k documents\n",
+    "If you don't know the answer, just say that you don't know, don't try to make up an answer.\n",
     "\n",
-    "We will now instantiate retriever again to fetch k number of documents. We can do this my setting `enable_limit=True` when instantiating the retriever. \n",
+    "----\n",
+    "{context}\n",
+    "----\n",
+    "Question: {question}\n",
+    "Answer:\n",
+    "\"\"\")\n",
     "\n",
-    "We will then test retriever to filter k documents."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "retriever = SelfQueryRetriever.from_llm(\n",
-    "    llm,\n",
-    "    vectorstore,\n",
-    "    document_content_description,\n",
-    "    metadata_field_info,\n",
-    "    enable_limit=True,\n",
-    "    verbose=True,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Test the retriever to filter k documents\n",
+    "DOCUMENT_PROMPT = PromptTemplate.from_template(\"\"\"\n",
+    "---\n",
+    "title: {title}                                                                                   \n",
+    "year: {year}  \n",
+    "director: {director}    \n",
+    "---\n",
+    "\"\"\")\n",
     "\n",
-    "We will now test the retriever with a query:  `what are two movies about dream`. \n",
-    "\n",
-    "The output would show exactly `2` documents. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Document(page_content='Leo DiCaprio gets lost in a dream within a dream within a dream within a ...', metadata={'year': 2010, 'director': 'Christopher Nolan', 'rating': 8.2}),\n",
-       " Document(page_content='A psychologist / detective gets lost in a series of dreams within dreams within dreams and Inception reused the idea', metadata={'year': 2006, 'director': 'Satoshi Kon', 'rating': 8.6})]"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "retriever.get_relevant_documents(\"what are two movies about dream\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Test retriever for complex queries\n",
-    "\n",
-    "We will try some complex queries with filters and `1 limit`.\n",
+    "def _combine_documents(\n",
+    "    docs, document_prompt=DOCUMENT_PROMPT, document_separator=\"\\n\\n\"\n",
+    "):\n",
+    "    doc_strings = [format_document(doc, document_prompt) for doc in docs]\n",
+    "    return document_separator.join(doc_strings)\n",
     "\n",
     "\n",
-    "Query: `Show that one movie which was about dream and was released after the year 1992 but before 2007?`. \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Document(page_content='A psychologist / detective gets lost in a series of dreams within dreams within dreams and Inception reused the idea', metadata={'year': 2006, 'director': 'Satoshi Kon', 'rating': 8.6})]"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "retriever.get_relevant_documents(\"Show that one movie which was about dream and was released after the year 1992 but before 2007?\")"
+    "_context = RunnableParallel(\n",
+    "    context=retriever | _combine_documents,\n",
+    "    question=RunnablePassthrough(),\n",
+    ")\n",
+    "\n",
+    "chain = (_context | LLM_CONTEXT_PROMPT | llm)\n",
+    "\n",
+    "chain.invoke(\"What movies are about dreams and was released after the year 1992 but before 2007?\")"
    ]
   }
  ],
