--- a/notebooks/langchain/langchain-parent-retriever.ipynb
+++ b/notebooks/langchain/langchain-parent-retriever.ipynb
@@ -5,6 +5,8 @@
    "metadata": {},
    "source": [
     "# Parent Child Retriever Examples\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/elastic/elasticsearch-labs/blob/main/notebooks/langchain/langchain-parent-retriever.ipynb)\n",
+    "\n",
     "**Using Elasticsearch Nested Dense Vector Support**\n",
     "\n",
     "When splitting documents for retrieval, there are often conflicting desires:\n",
