--- a/supporting-blog-content/plagiarism-detection-with-elasticsearch/plagiarism_detection_es.ipynb
+++ b/supporting-blog-content/plagiarism-detection-with-elasticsearch/plagiarism_detection_es.ipynb
@@ -48,14 +48,13 @@
     {
       "cell_type": "code",
       "source": [
-        "from elasticsearch import Elasticsearch, helpers\n",
-        "from urllib.request import urlopen\n",
-        "import json\n",
-        "from urllib.request import urlopen\n",
-        "from pathlib import Path\n",
+        "from elasticsearch import Elasticsearch\n",
+        "from elasticsearch.client import MlClient\n",
         "from eland.ml.pytorch import PyTorchModel\n",
         "from eland.ml.pytorch.transformers import TransformerModel\n",
-        "from elasticsearch.client import MlClient\n",
+        "from urllib.request import urlopen\n",
+        "import json\n",
+        "from pathlib import Path\n",
         "import getpass"
       ],
       "metadata": {
