--- a/supporting-blog-content/plagiarism-detection-with-elasticsearch/plagiarism_detection_es.ipynb
+++ b/supporting-blog-content/plagiarism-detection-with-elasticsearch/plagiarism_detection_es.ipynb
@@ -48,7 +48,7 @@
     {
       "cell_type": "code",
       "source": [
-        "from elasticsearch import Elasticsearch\n",
+        "from elasticsearch import Elasticsearch, helpers\n",
         "from elasticsearch.client import MlClient\n",
         "from eland.ml.pytorch import PyTorchModel\n",
         "from eland.ml.pytorch.transformers import TransformerModel\n",
