Fix pipeline name in plagiarsm detection notebook (Fixes #148)

--- a/supporting-blog-content/plagiarism-detection-with-elasticsearch/plagiarism_detection_es.ipynb
+++ b/supporting-blog-content/plagiarism-detection-with-elasticsearch/plagiarism_detection_es.ipynb
@@ -314,7 +314,7 @@
         "    },\n",
         "               dest= {\n",
         "                  \"index\": \"plagiarism-checker\",\n",
-        "                  \"pipeline\": \"plagiarism-pipeline\"\n",
+        "                  \"pipeline\": \"plagiarism-checker-pipeline\"\n",
         "    }\n",
         ")"
       ],
