Added langchain document chunking notebook to nbtest

--- a/notebooks/document-chunking/_nbtest.teardown.with-langchain-splitters.ipynb
+++ b/notebooks/document-chunking/_nbtest.teardown.with-langchain-splitters.ipynb
@@ -32,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client.indices.delete(index=\"chunk_passages_example\", ignore_unavailable=True)\n",
+    "client.indices.delete(index=\"nb_parent_retriever_index\", ignore_unavailable=True)\n",
     "try:\n",
     "    client.ingest.delete_pipeline(id=\"chunk_text_to_passages\")\n",
     "except:\n",
